Sort for stability

--- a/manifest.json
+++ b/manifest.json
@@ -19,13 +19,13 @@
       "Process_diu8ta2"
     ],
     "Process_90mmqlw": [
-      "SingleTask_Process",
+      "Process_diu8ta2",
       "Process_sypm122",
-      "Process_diu8ta2"
+      "SingleTask_Process"
     ],
     "Process_cqu23d1": [
-      "SingleTask_Process",
-      "Process_p4pfxhq"
+      "Process_p4pfxhq",
+      "SingleTask_Process"
     ],
     "Process_p4pfxhq": [
       "SingleTask_Process"
