Write specs mk include file

--- a/manifest.json
+++ b/manifest.json
@@ -86,5 +86,20 @@
     "bpmn/test-cases/start-timer1/start-timer1.bpmn": [
       "Process_84evfap"
     ]
+  },
+  "workflow_spec_json_by_process_id": {
+    "Process_048urbd": "specs/test-cases/call-activity-with-manual-tasks/call_manual_tasks.json",
+    "Process_84evfap": "specs/test-cases/start-timer1/start-timer1.json",
+    "Process_90mmqlw": "specs/test-cases/multiple-call-activities/multiple_call_activities.json",
+    "Process_cqu23d1": "specs/test-cases/nested-call-activities/nested_call_activity.json",
+    "Process_diu8ta2": "specs/test-cases/manual-tasks/manual_tasks.json",
+    "Process_fwplcm1": "specs/test-cases/cycle-start-timer/cycle-start-timer.json",
+    "Process_p4pfxhq": "specs/test-cases/simple-call-activity/simple_call_activity.json",
+    "Process_sypm122": "specs/test-cases/countries-and-cities/country_cities.json",
+    "Process_vv0fdgv": "specs/test-cases/simple-subprocess/simple_subprocess.json",
+    "Process_w13g1wd": "specs/test-cases/madhu-timer/madhutimertask.json",
+    "SingleTask_Process": "specs/test-cases/single-task/single_task.json",
+    "coin-gecko_simple-price": "specs/test-cases/http-v2-connector-test/httpv2.json",
+    "no_tasks": "specs/test-cases/no-tasks/no-tasks.json"
   }
 }
